change app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Library - Vivien - IMTA</string>
+    <string name="app_name">Louradour</string>
     <string name="synopsys_text">Synopsys : </string>
 </resources>
